fichier validation google

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -96,7 +96,7 @@ google:
         trackers:
             default:
                 name:      AmundiGestionEngageeTracker
-                accountId: UA-xxxx-x
+                accountId: UA-37218492-1
                 domain:    .amundi-gestionengagee.com
                 trackPageLoadTime: true
 
